feat: add workspace config apis for kusion server
